# Information-Systems-Design-Methods-2025

./: CMakeLists.txt
prime_numbers/: CMakeLists.txt  README.md
prime_numbers/include/algo/: IAlgo.h
prime_numbers/include/algo/impl/: CustomAlgo.h  EratosthenesAlgo.h
prime_numbers/include/benchmark/: Benchmark.h
prime_numbers/include/generator/: IGenerator.h
prime_numbers/include/generator/impl/: PrimeNumbersGenerator.h
prime_numbers/include/printer/impl/: ConsolePrinter.h
prime_numbers/include/saver/: Saver.h
prime_numbers/include/util/: IPrinter.h
prime_numbers/include/util/impl/: ConsolePrinter.h
prime_numbers/src/: main.cpp
prime_numbers/src/algo/impl/: CustomAlgo.cpp  EratosthenesAlgo.cpp
prime_numbers/src/generator/impl/: PrimeNumbersGenerator.cpp
prime_numbers/src/saver/: Saver.cpp
