cmake_minimum_required(VERSION 3.10)

# Declare the project for the task prime numbers
project(PrimeNumbers VERSION 1.0.0 LANGUAGES CXX)

# Set the C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXE_LINKER_FLAGS "-static")

# Add the source files
file(GLOB_RECURSE SOURCES ./src/*.cpp)

# Create the executable
add_executable(PrimeExecutable ${SOURCES})

# Include directories for lab-8
target_include_directories(PrimeExecutable PRIVATE
        ./include
)